# goldenidol

./: .gitignore  goldenrun.sqlite3  pyproject.toml
goldenrun/: __init__.py  cli.py  config.py  exceptions.py  tracing.py  typing.py  util.py
goldenrun/db/: base.py  sqlite.py
tests/: test.py
